fix: change details api
