# internal/handler/api/point/detail/list.go
@@ -8,14 +8,20 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-type List struct {
-	UID          int64 `query:"uid,required,number"`
-	FetchService bool  `query:"fetchService,number"`
-	Page         int   `query:"page,number"`
-	PageSize     int   `query:"pageSize,number"`
+type response struct {
+	render.Response
+	Data respData `json:"data"`
 }
 
-type response struct {
+type respData struct {
+	// 积分列表
+	List []*core.UserPointDetail `json:"list"`
+	// 页码值
+	Page int `json:"page" example:"1"`
+	// 每页显示条数
+	PageSize int `json:"page_size" example:"20"`
+	// 总条数
+	Total int64 `json:"total" example:"100"`
 }
 
 // @Summary 获取积分明细列表
@@ -27,15 +33,16 @@ type response struct {
 // @Param uid query int true "uid"
 // @Param fetchService query bool true "是否获取服务积分，true：返回服务积分，false：返回消费积分"
 // @Param page query int false "当前页码"
-// @Param page_size query int false "每页显示条数"
-// @Success 200 object render.Response "成功返回值"
+// @Param pageSize query int false "每页显示条数"
+// @Param type query int false "类型 1：发放，2：使用， 0或不传为全部"
+// @Success 200 object response "成功返回值"
 // @Failure 400 object render.Response "失败返回值"
 // @Router /api/point/details [get]
 func HandlerList(
 	detail core.UserPointDetailStore,
 ) fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		req := new(List)
+		req := new(core.UserPointDetailListRequest)
 
 		if err := c.QueryParser(req); err != nil {
 			return render.Fail(c, err)
@@ -44,18 +51,17 @@ func HandlerList(
 		if err := validate.Struct(req); err != nil {
 			return render.Fail(c, err)
 		}
-		details, total, err := detail.List(req.UID, req.FetchService, req.Page, req.PageSize)
+		details, total, err := detail.List(req)
 		if err != nil {
 			return render.Fail(c, err)
 		}
 
-		res := map[string]interface{}{
-			"list":      details,
-			"page":      req.Page,
-			"page_size": req.PageSize,
-			"total":     total,
-		}
+		data := new(respData)
+		data.List = details
+		data.Page = req.Page
+		data.PageSize = req.PageSize
+		data.Total = total
 
-		return render.Success(c, res)
+		return render.Success(c, data)
 	}
 }
